--- a/a1.html
+++ b/a1.html
@@ -12,43 +12,68 @@
         padding: 20px;
     }
     .menu-container{
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 20px;
         padding:10px;
         margin: auto;
         max-width:1000px;
 
+
     }
     .menu-item{
-     background-color: yellow;
+    background-color: rgb(212, 212, 18);
      background-size: 40px;
      padding:20px;
+     width: 250px;
      text-align: center;
      border-radius: 10px;
      border-color: crimson;
      border-style: ridge;
+     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+     transition: transform 0.3s ease-in-out;
     }
-    .menu-item img{
-        width: 200px;
+    .menu-item:hover {
+          background-color: aliceblue;
+          transform:scale(1.10) ;
+    }
+    img{
+        width: 150px;
+        height: 100px;
+        padding: 5px;
         border-radius: 8px;
         border-width: 8px;
         border-style:ridge;
-        border-color: aqua;
-        
+    
+    }
+    img:hover{
+        background-color: rgb(249, 48, 8);
+    }
+    p{
+        text-align: center;
+        font-size: 20px;
+        color: rgb(244, 11, 100);
+    }
+    p:hover{
+        background-color: aqua;
+        color: black;
+        padding: 3px;
+    }
 </style>
 <body>
     <h1>Chicken Items</h1>
     <div class="menu-container">
-        <div class="menu-item"><img src="chicken items\th (1).jpeg"></div>
-        <div class="menu-item"><img src="chicken items\th (2).jpeg"></div>
-        <div class="menu-item"><img src="chicken items\th (3).jpeg"></div>
-        <div class="menu-item"><img src="chicken items\th (4).jpeg"></div>
-        <div class="menu-item"><img src="chicken items\th (5).jpeg"></div>
-        <div class="menu-item"><img src="chicken items\th (6).jpeg"></div>
-        <div class="menu-item"><img src="chicken items\th (7).jpeg"></div>
-        <div class="menu-item"><img src="chicken items\th (8).jpeg"></div>
-        <div class="menu-item"><img src="chicken items\th (10).jpeg"></div>
+        <div class="menu-item"><img src="chicken items\chicken items\th (1).jpeg"><p>chickengrill</p></div>
+        <div class="menu-item"><img src="chicken items\chicken items\th (2).jpeg"><p>KFC</p></div>
+        <div class="menu-item"><img src="chicken items\chicken items\th (3).jpeg"><P>chicken curry</P></div>
+        <div class="menu-item"><img src="chicken items\chicken items\th (4).jpeg"><p>fullmundy</p></div>
+        <div class="menu-item"><img src="chicken items\chicken items\th (5).jpeg"><p>items full plate</p></div>
+        <div class="menu-item"><img src="chicken items\chicken items\th (6).jpeg"><p>mini plate</p></div>
+        <div class="menu-item"><img src="chicken items\chicken items\th (7).jpeg"><p>double dhum</p></div>
+        <div class="menu-item"><img src="chicken items\chicken items\th (8).jpeg"><p>chicken sticks</p></div>
+        <div class="menu-item"><img src="chicken items\chicken items\th (9).jpeg"><p>grill chicken</p></div>
+        <div class="menu-item"><img src="chicken items\chicken items\th (10).jpeg"><p>kabab</p></div>
+        <div class="menu-item"><img src="chicken items\chicken items\th (11).jpeg"><p>saslic sticks</p></div>
     </div>
 </body>
 </html>
