--- a/a3.html
+++ b/a3.html
@@ -4,58 +4,105 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delicious Ice Cream</title>
-    <style>
+    <style> 
         body {
-            background-color: antiquewhite;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            /* 3D Black Background using radial gradient */
+            background: radial-gradient(circle at center, #1a1a1a, #000000);
+            background-size: cover;
+            color: white;
+            min-height: 100vh;
+            perspective: 1000px;
+        }
+
+        h1 {
             text-align: center;
-        }
-        main {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
             padding: 20px;
+            font-size: 36px;
+            text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff00ff;
+            color: #ffffff;
         }
-        .menu-items {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: white;
+
+        main {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
             padding: 10px;
+            margin: auto;
+            max-width: 1000px;
+        }
+
+        .menu-items {
+            background: linear-gradient(145deg, #2b2b2b, #1c1c1c);
+            box-shadow: 10px 10px 20px #0a0a0a, -10px -10px 20px #2a2a2a;
+            padding: 20px;
+            width: 200px;
+            height: 180px;
+            margin: auto;
+            text-align: center;
             border-radius: 10px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease-in-out;
+            border: 2px ridge crimson;
+            transition: transform 0.3s ease, background-color 0.3s ease;
         }
+
         .menu-items:hover {
-            transform: scale(1.05);
-            background-color: #ffeb99;
+            background: linear-gradient(145deg, #3a3a3a, #2a2a2a);
+            transform: scale(1.05) rotateY(5deg);
         }
+
         img {
-            width: 400px;
-            height: 300px;
+            width: 150px;
+            height: 100px;
             padding: 5px;
             border-radius: 10px;
-            border: 2px groove rgb(246, 49, 15);
-            object-fit: cover;
+            border-style: groove;
+            border-color: rgb(246, 49, 15);
         }
+
         p {
             text-align: center;
-            font-size: 20px;
-            margin-top: 5px;
-            font-weight: bold;
-            color: #8b0000;
+            font-size: 18px;
+            margin-top: 10px;
+            color: #f0f0f0;
+        }
+
+        p:hover {
+            background-color: rgb(243, 235, 14);
+            color: black;
+            border-radius: 5px;
+            padding: 2px;
         }
     </style>
 </head>
 <body>
     <h1>Delicious Ice Cream Menu</h1>
     <main>
-        <div class="menu-items"><img src="chicken items/ice cream/ice1.jpeg" alt="Ice Cream 1"><p>Chocolate Ice Cream</p></div> 
-        <div class="menu-items"><img src="chicken items/ice cream/ice2.jpg" alt="Ice Cream 2"><p>Vanilla Ice Cream</p></div>
-        <div class="menu-items"><img src="chicken items/ice cream/ice4.webp" alt="Ice Cream 3"><p>Strawberry Ice Cream</p></div>
-        <div class="menu-items"><img src="chicken items/ice cream/ice5.jpg" alt="Ice Cream 4"><p>Butterscotch Ice Cream</p></div>
-        <div class="menu-items"><img src="chicken items/ice cream/ice6.jpeg" alt="Ice Cream 5"><p>Mint Choco Chip Ice Cream</p></div>
-        <div class="menu-items"><img src="chicken items/ice cream/icm3.jpeg" alt="Ice Cream 6"><p>Blueberry Ice Cream</p></div>
+        <div class="menu-items">
+            <img src="chicken items/ice cream/ice1.jpeg" alt="Ice Cream 1">
+            <p>Chocolate Ice Cream</p>
+        </div> 
+        <div class="menu-items">
+            <img src="chicken items/ice cream/ice2.jpg" alt="Ice Cream 2">
+            <p>Vanilla Ice Cream</p>
+        </div>
+        <div class="menu-items">
+            <img src="chicken items/ice cream/ice4.webp" alt="Ice Cream 3">
+            <p>Strawberry Ice Cream</p>
+        </div>
+        <div class="menu-items">
+            <img src="chicken items/ice cream/ice5.jpg" alt="Ice Cream 4">
+            <p>Butterscotch Ice Cream</p>
+        </div>
+        <div class="menu-items">
+            <img src="chicken items/ice cream/ice6.jpeg" alt="Ice Cream 5">
+            <p>Mint Choco Chip Ice Cream</p>
+        </div>
+        <div class="menu-items">
+            <img src="chicken items/ice cream/icm3.jpeg" alt="Ice Cream 6">
+            <p>Blueberry Ice Cream</p>
+        </div>
     </main>
 </body>
 </html>
