--- a/a2.html
+++ b/a2.html
@@ -1,74 +1,92 @@
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mutton items</title>
-    <style>
-        body{
-            background-color: antiquewhite;
+    <title>Delicious Ice Cream</title>
+    <style> 
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            /* 3D Black Background using radial gradient */
+            background: radial-gradient(circle at center, #1a1a1a, #000000);
+            background-size: cover;
+            color: white;
+            min-height: 100vh;
+            perspective: 1000px;
         }
-       main{
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 20px;
-        padding: 10px;
-        margin: auto;
-        max-width: 1000px;
-    }
-    .menu-items{
-        background-color: rgb(193, 205, 230);
-        padding: 20px;
-        width: 200px;
-        height: 140px;
-        margin: 20px;
-        text-align: center;
-        border-radius: 10px;
-        border: 2px ridge crimson;
-        border-radius: 10px;
-        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-        transition: transform 0.3s ease-in-out;
-    }
-    .menu-items:hover{
-        background-color: aquamarine;
-        transform: scale(1.10);
-            
-    }
-     img {
-        width: 150px;
-        height: 100px;
-        padding: 5px;
-        border-radius:10px;
-        border-style: groove;
-        border-color: rgb(246, 49, 15);
-    }
-    p{
-        text-align: center;
-        font-size: 20px;
-    
-    }
-    p:hover{
-        background-color: rgb(243, 235, 14);
-    }
-    h1{
-        text-align: center;
-        background-color: black;
-        color: aqua;
-    }
-   
 
+        h1 {
+            text-align: center;
+            padding: 20px;
+            font-size: 36px;
+            text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff00ff;
+            color: #ffffff;
+        }
+
+        main {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 10px;
+            margin: auto;
+            max-width: 1000px;
+        }
+
+        .menu-items {
+            background: linear-gradient(145deg, #2b2b2b, #1c1c1c);
+            box-shadow: 10px 10px 20px #0a0a0a, -10px -10px 20px #2a2a2a;
+            padding: 20px;
+            width: 200px;
+            height: 180px;
+            margin: auto;
+            text-align: center;
+            border-radius: 10px;
+            border: 2px ridge crimson;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+        }
+
+        .menu-items:hover {
+            background: linear-gradient(145deg, #3a3a3a, #2a2a2a);
+            transform: scale(1.05) rotateY(5deg);
+        }
+
+        img {
+            width: 150px;
+            height: 100px;
+            padding: 5px;
+            border-radius: 10px;
+            border-style: groove;
+            border-color: rgb(246, 49, 15);
+        }
+
+        p {
+            text-align: center;
+            font-size: 18px;
+            margin-top: 10px;
+            color: #f0f0f0;
+        }
+
+        p:hover {
+            background-color: rgb(243, 235, 14);
+            color: black;
+            border-radius: 5px;
+            padding: 2px;
+        }
     </style>
-
 </head>
 <body>
-   <h1>Mutton items</h1>
-<main>
-    <div class="menu-items"><img src="chicken items\mutton items\mutton biryani.jpeg" ><p>Biryani mandy</p></div> 
-    <div class="menu-items"><img src="chicken items\mutton items\muttonKunda biryani1.jpeg" ><p>Biryani</p></div>
-    <div class="menu-items"><img src= "chicken items\mutton items\mutton3.jpeg"><p>Chapps</p></div>
-    <div class="menu-items"><img src="chicken items\mutton items\mutton4.jpeg" ><p>Leg piece</p></div>
-    <div class="menu-items"><img src="chicken items\mutton items\OIP.jpeg"><p>Bone pices</p></div>
-    <div class="menu-items"><img src="chicken items\mutton items\mutton2.jpeg" ><p>Khimaa</p></div>
-    <div class="menu-items"><img src="chicken items\mutton items\mutton5.jpg" ><p>Leg pices</p></div>
-</main>
+    <h1>Delicious Ice Cream Menu</h1>
+    <main>
+        <div class="menu-items"><img src="chicken items\mutton items\mutton biryani.jpeg" ><p>Biryani mandy</p></div> 
+        <div class="menu-items"><img src="chicken items\mutton items\muttonKunda biryani1.jpeg" ><p>Biryani</p></div>
+        <div class="menu-items"><img src= "chicken items\mutton items\mutton3.jpeg"><p>Chapps</p></div>
+        <div class="menu-items"><img src="chicken items\mutton items\mutton4.jpeg" ><p>Leg piece</p></div>
+        <div class="menu-items"><img src="chicken items\mutton items\OIP.jpeg"><p>Bone pices</p></div>
+        <div class="menu-items"><img src="chicken items\mutton items\mutton2.jpeg" ><p>Khimaa</p></div>
+        <div class="menu-items"><img src="chicken items\mutton items\mutton5.jpg" ><p>Leg pices</p></div>
+    </main>
 </body>
 </html>
