--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">Jeelani <span>Catering</span></div>
+            <div class="logo">Jeelani <span>Caterers & Events</span></div>
             <p>Exquisite Culinary Experiences for Every Occasion</p>
         </div>
     </header>
@@ -678,7 +678,7 @@
     <section id="home">
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h1>Welcome to Jeelani Catering Services</h1>
+            <h1>Welcome to Jeelani Caterers & Events Services</h1>
             <p>Creating unforgettable culinary experiences for weddings, corporate events, and special occasions with signature dishes and exceptional service.</p>
             <a href="#menu" class="btn">Explore Our Menu</a>
         </div>
