--- a/index.html
+++ b/index.html
@@ -653,11 +653,18 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="logo">Jeelani <span>Caterers & Events</span></div>
-            <p>Exquisite Culinary Experiences for Every Occasion</p>
+    <div class="container">
+        <div class="header-content">
+            <div class="logo-container">
+                <img src="path-to-your-jeelani-caterers-logo.png" alt="Jeelani Caterers Logo" class="logo-image">
+            </div>
+            <div class="text-content">
+                <div class="company-name">Jeelani <span>Catering</span></div>
+                <p class="tagline">Exquisite Culinary Experiences for Every Occasion</p>
+            </div>
         </div>
-    </header>
+    </div>
+</header>
     
     <nav id="navbar">
         <div class="container">
