--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
     </style>
 </head>
 <body>
-    <header>
+<header class="logo-left">
     <div class="container">
         <div class="header-content">
             <div class="logo-container">
