--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
     <div class="container">
         <div class="header-content">
             <div class="logo-container">
-                <img src="path-to-your-jeelani-caterers-logo.png" alt="Jeelani Caterers Logo" class="logo-image">
+                <img src="ctrphotos\logo.png" alt="Jeelani Caterers Logo" class="logo-image">
             </div>
             <div class="text-content">
                 <div class="company-name">Jeelani <span>Catering</span></div>
