--- a/index.html
+++ b/index.html
@@ -652,14 +652,14 @@
     </style>
 </head>
 <body>
-<header class="logo-left">
+<header>
     <div class="container">
         <div class="header-content">
             <div class="logo-container">
-                <img src="ctrphotos\logo.png" alt="Jeelani Caterers Logo" class="logo-image">
+                <img src="ctrphotos/logo.png" alt="Jeelani Caterers Logo" class="logo-image">
             </div>
             <div class="text-content">
-                <div class="company-name">Jeelani <span>Catering</span></div>
+                <h1 class="company-name">Jeelani <span>Catering</span></h1>
                 <p class="tagline">Exquisite Culinary Experiences for Every Occasion</p>
             </div>
         </div>
