--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
     <div class="header-content">
      
       <div class="text-content">
-        <h1 class="company-name">Jeelani Catering Services</h1>
+        <h1 class="company-name"> Jeelani Caterers & Events Services</h1>
         <p class="tagline">Delicious food for every occasion</p>
       </div>
     </div>
